syntax = "proto3";

package llmoperator.workspace.server.v1;

import "google/api/annotations.proto";

option go_package = "github.com/llm-operator/job-manager/api/v1";

message Notebook {
  string id = 1;
  string name = 2;

  int64 created_at = 3;
  int64 started_at = 4;
  int64 stopped_at = 5;

  string image = 6;
  Resources resources = 7;
  map<string, string> envs = 8;

  message Error {
    string code = 1;
    string message = 2;
  }
  Error error = 9;
  string status = 10;

  // this field is populated only when a new notebook is created.
  string token = 11;

  string project_id = 12;
  string kubernetes_namespace = 13;
}

message Resources {
  message Quantity {
    int32 requests = 1;
    int32 limits = 2;
  }

  Quantity cpu_milicore = 1;
  Quantity memory_megabytes = 2;
  Quantity storage_megabytes = 3;

  int32 gpu_count = 4;
}

message CreateNotebookRequest {
  string name = 1;

  message Image {
    oneof image {
      // Type of preset images.
      string type = 1;
      // URI to the custom container image.
      string uri = 2;
    }
  }
  Image image = 2;
  Resources resources = 3;
  map<string, string> envs = 4;
}

message ListNotebooksRequest {
  // after is the identifier for the last notebook from the previous pagination request.
  string after = 1;
  // limit is the number of notes to retrieve. Defaults to 20.
  int32 limit = 2;
}

message ListNotebooksResponse {
  repeated Notebook notebooks = 1;
  bool has_more = 3;
}

message GetNotebookRequest {
  string id = 1;
}

message DeleteNotebookRequest {
  string id = 1;
}

message DeleteNotebookResponse {
}

message StopNotebookRequest {
  string id = 1;
}

message StartNotebookRequest {
  string id = 1;
}

service WorkspaceService {
  rpc CreateNotebook(CreateNotebookRequest) returns (Notebook) {
    option (google.api.http) = {
      post: "/v1/workspaces/notebooks"
      body: "*"
    };
  }
  rpc ListNotebooks(ListNotebooksRequest) returns (ListNotebooksResponse) {
    option (google.api.http) = {
      get: "/v1/workspaces/notebooks"
    };
  }
  rpc GetNotebook(GetNotebookRequest) returns (Notebook) {
    option (google.api.http) = {
      get: "/v1/workspaces/notebooks/{id}"
    };
  }
  rpc DeleteNotebook(DeleteNotebookRequest) returns (DeleteNotebookResponse) {
    option (google.api.http) = {
      delete: "/v1/workspaces/notebooks/{id}"
    };
  }

  rpc StopNotebook(StopNotebookRequest) returns (Notebook) {
    option (google.api.http) = {
      post: "/v1/workspaces/notebooks/{id}/actions:stop"
    };
  }
  rpc StartNotebook(StartNotebookRequest) returns (Notebook) {
    option (google.api.http) = {
      post: "/v1/workspaces/notebooks/{id}/actions:start"
    };
  }
}

enum NotebookState {
  NOTEBOOK_STATE_UNKNOWN = 0;
  NOTEBOOK_STATE_QUEUED = 1;
  NOTEBOOK_STATE_RUNNING = 2;
  NOTEBOOK_STATE_STOPPED = 3;
  NOTEBOOK_STATE_FAILED = 4;
  NOTEBOOK_STATE_DELETED = 5;
}

enum NotebookQueuedAction {
  NOTEBOOK_QUEUED_ACTION_UNKNOWN = 0;
  NOTEBOOK_QUEUED_ACTION_STARTING = 1;
  NOTEBOOK_QUEUED_ACTION_STOPPING = 2;
  NOTEBOOK_QUEUED_ACTION_DELETING = 3;
}

message InternalNotebook {
  Notebook notebook = 1;

  NotebookState state = 2;
  NotebookQueuedAction queued_action = 3;
}

message ListQueuedInternalNotebooksRequest {
  string tenant_id = 1;
}

message ListQueuedInternalNotebooksResponse {
  repeated InternalNotebook notebooks = 1;
}

message UpdateNotebookStateRequest {
  string id = 1;
  string tenant_id = 2;
  NotebookState state = 3;
}

message UpdateNotebookStateResponse {
}

service WorkspaceWorkerService {
  rpc ListQueuedInternalNotebooks(ListQueuedInternalNotebooksRequest) returns (ListQueuedInternalNotebooksResponse);
  rpc UpdateNotebookState(UpdateNotebookStateRequest) returns (UpdateNotebookStateResponse);
}
